adiciona css na pagina

--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portif Thiago Lordêllo</title>
+    
+    <style>
+     body{background-color:#ffb238;}
+     .estiliza_fonte {font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
+     .tama_lista1 {font-size:10px;}
+     .tama_lista2 {font-size:20px;}
+     .tama_lista3 {font-size:30px;}
+     .tama_lista4 {font-size:40px;}
+     .tama_lista5 {font-size:50px;}
+    </style>
+    
+
 </head>
 <body>
     <h1>Portifolio Pessoal</h1> <hr>
 
     <section id=nome>
-    <h3>Thiago Lordêllo Souza</h3>
+    <h3 calss="estiliza_fonte">Thiago Lordêllo Souza</h3>
     </section>
 
     <section id=foto></section>
@@ -20,7 +32,7 @@
     <p> Aqui estou numa foto após minha corrida hoje pela manhã. A corrida me faz muito bem. Paixão. <br> <br> <br>  </p>
 
     <section id=descricao></section>
-    <p1>Sou <b>brasileiro</b> natural do <b>estado do Rio de Janeiro</b> e resido na <b>capital do Rio de Janeiro</b> <br> <br>  </p1>
+    <p1 class="estiliza_fonte">Sou <i>brasileiro</i> natural do <i>estado do Rio de Janeiro</i> e resido na <i>capital do Rio de Janeiro</i> <br> <br>  </p1>
     </section>
 
     <section id="habilidades">
@@ -30,11 +42,11 @@
    </section>
 
     <ul>
-        <li> <b>SQL</b> </li>
-        <li>Lógica de Programação</li>
-        <li>Inglês Intermediário</li>
-        <li>Linguagem C</li>
-        <li>Redes de Computadores</li> 
+        <li class="tama_lista1"> <b>SQL</b> </li>
+        <li class="tama_lista2">Lógica de Programação</li>
+        <li class="tama_lista3">Inglês Intermediário</li>
+        <li class="tama_lista4">Linguagem C</li>
+        <li class="tama_lista5">Redes de Computadores</li> 
 
     </ul> <br>
    
